# IRG_Calculator

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yaml
include/irg/cli/: application.hpp  console_io.hpp
include/irg/core/: irg_calculator.hpp
include/irg/i18n/: language.hpp  translator.hpp
src/: main.cpp
src/cli/: application.cpp  console_io.cpp
src/core/: irg_calculator.cpp
src/i18n/: translator.cpp
tests/: CMakeLists.txt  test_irg_calculator.cpp
